# tiny_wgpu

./: Cargo.toml  LICENSE.txt  README.md
examples/: compute.rs  compute.wgsl  window.rs  window.wgsl
src/: lib.rs
