[package]
name = "tiny_wgpu"
version = "0.1.7"
edition = "2021"
license-file = "./LICENSE.txt"
description = "wgpu helper library"
homepage = "https://github.com/ccaven/tiny_wgpu"
repository = "https://github.com/ccaven/tiny_wgpu"
readme = "./README.md"

[dependencies]
flume = "0.11.0"
wgpu = "0.20.0"

[dev-dependencies]
pollster = "0.3.0"
winit = "0.29.15"
bytemuck = "1.15.0"
env_logger = "0.10"